--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/hugo_theme_pickles"]
 	path = themes/hugo_theme_pickles
-	url = https://github.com/mismith0227/hugo_theme_pickles
-	branch = release
+	url = https://github.com/tglynn/hugo_theme_pickles
+	branch = develop
